HtmlUi: Fixed SmartField row width + border clipping

--- a/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/form/fields/smartfield/SmartField.css
+++ b/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/form/fields/smartfield/SmartField.css
@@ -37,6 +37,7 @@
   position: absolute;
   border: solid 1px @popup-border-color;
   border-radius:  @border-radius;
+  overflow: hidden;
   z-index: 101;
   margin-top: 5px;
   background-color: white;
@@ -61,7 +62,7 @@
           width: 100%;
           height: 100%;
           display: block;
-          content: ' ';
+          content: '';
           position: absolute;
           border-top: solid 1px @selection-border-color;
           top: -1px;
